# dora

./: .csslintrc  .cursorrules  .env.example  .gitignore  BACKEND_IMPROVEMENT_PLAN.md  CHANGELOG.md  HTML_LABELS_AUDIT.md  LICENSE  MOCK_API_DESIGN.md  MONACO_INTEGRATION.md  README.md  RELEASE_NOTES.md  RELEASE_TRACKER.md  cliff.toml  compile_log.txt  compile_log_2.txt  compile_log_3.txt  generate-icons.sh  icon.icns  lsp.md  nav_sidebar.diff  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  recap.md  reddit.txt  rename-single-types-correct.js  rename-single-types-final.js  rename-single-types.js  source-metadata-phase1-hardening.md  source-metadata-phase2-ux.md  source-metadata-phase3-file-sources.md  source-metadata-phase4-polish.md  source-metadata-phase5-save-as-duckdb.md  source-metadata-phase6-import-files.md  source-metadata-phase7-release-polish.md  source-metadata-recap.md  source-metadata-roadmap.md  sql-queries-frontend.md  (+4 more)
.agent/: AGENTS.md  claude.md
.github/: release.yml
__tests__/: ai-actions.test.ts  connection-url-sanitizer.test.ts  data-file-health.test.ts  data-file-source-status.test.ts  data-file-views.test.ts  default-query-table.test.ts  import-files-into-duckdb.test.ts  model-id-input.test.ts  providers.test.ts  rows-to-sql-insert.test.ts  save-data-file-session.test.ts  settings-panel-search.test.ts  source-labels.test.ts  source-metadata-release.test.ts  supabase-integration.test.ts  supabase-oauth-proxy.test.ts  tsconfig.json  ui-actions.test.ts  vitest.setup.ts
_old/: next.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  SECURITY.md  build.rs  splash.html  splash_option.html  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 003.sql  004.sql  005.sql  006.sql  007.sql  008.sql  009.sql  012.sql
apps/desktop/src-tauri/src/: bindings.rs  cli.rs  config.rs  credential_storage.rs  credentials.rs  database.rs  error.rs  init.rs  lib.rs  main.rs  observability.rs  security.rs  storage.rs  test_queries.rs  utils.rs
apps/desktop/src-tauri/src/commands/: build_cache.rs  credential_storage.rs  mod.rs
apps/desktop/src-tauri/src/commands_system/: commands.rs  mod.rs  registry.rs  types.rs
apps/desktop/src-tauri/src/database/: adapter.rs  blob_display.rs  commands.rs  connection_monitor.rs  connection_repository.rs  contract.rs  dialect.rs  duckdb.rs  duckdb_backend.rs  live_monitor.rs  maintenance.rs  metadata.rs  parser.rs  postgres.rs  ssh_tunnel.rs  stmt_manager.rs  types.rs
apps/desktop/src-tauri/src/database/adapter/: mod.rs  read.rs  watch.rs  write.rs  write_libsql.rs  write_mysql.rs  write_postgres.rs  write_posthog.rs  write_sqlite.rs
apps/desktop/src-tauri/src/database/commands/: ai.rs  connections.rs  integrations.rs  live_monitor.rs  mod.rs  mutation.rs  query.rs  query_builder.rs  schema.rs  schema_export.rs  scripts.rs  seeding.rs  settings.rs  snippet_folders.rs  snippets.rs  storage.rs
apps/desktop/src-tauri/src/database/duckdb/: file_source.rs  import_files.rs  save_session.rs
apps/desktop/src-tauri/src/database/duckdb_ipc/: client.rs  mod.rs
apps/desktop/src-tauri/src/database/libsql/: execute.rs  mod.rs  schema.rs
apps/desktop/src-tauri/src/database/mysql/: execute.rs  mod.rs  parser.rs  schema.rs
apps/desktop/src-tauri/src/database/postgres/: connect.rs  connection_string.rs  execute.rs  parser.rs  row_writer.rs  schema.rs  tls.rs
apps/desktop/src-tauri/src/database/posthog/: mod.rs  schema.rs
apps/desktop/src-tauri/src/database/services/: connection.rs  metadata.rs  mod.rs  mutation.rs  query.rs  query_builder.rs  schema_export.rs  seeding.rs  tests.rs
apps/desktop/src-tauri/src/database/services/ai/: anthropic.rs  gemini.rs  groq.rs  mod.rs  models.rs  ollama.rs  openai.rs  prompts.rs  usage.rs
apps/desktop/src-tauri/src/database/sqlite/: execute.rs  parser.rs  row_writer.rs  schema.rs
apps/desktop/src-tauri/src/integrations/: mod.rs  neon.rs  planetscale.rs  posthog.rs  supabase.rs  vercel.rs  xata.rs
apps/desktop/src-tauri/src/ollama_installer/: download.rs  mod.rs  paths.rs  runtime.rs
apps/desktop/src-tauri/src/storage/: ai_keys.rs  ai_usage.rs  connection_history.rs  connections.rs  migrator.rs  mod.rs  queries.rs  serialize.rs  settings.rs  snippet_folders.rs  types.rs
apps/desktop/src-tauri/src/window/: commands.rs  file_probe.rs
apps/desktop/src-tauri/tests/: build_cache_tests.rs  commands_system_tests.rs  credentials_tests.rs  live_monitor_commands_tests.rs  mutation_command_registration_tests.rs  mysql_metadata_tests.rs  security_tests.rs  sqlite_parser_tests.rs  utils_tests.rs
docs/: RELEASE_NOTES.md  ai-providers.md  api.mdx  app-audit-2026-02-20.md  aur.md  backend-refactor-checklist.md  beta-launch-fixes.md  docker-manager-improvements.md  duckdb-helper-process.md  features_to_record_for_docs.md  getting-started.mdx  go-cli-runner.mdx  index.mdx  installation.mdx  keyboard-shortcuts-spec.md  live-change-monitoring.md  lovable-homepage-prompts.md  meta.json  package-distribution-plan.md  product-roadmap.md  provider-support-roadmap.md  schema-visualizer-design-handoff.md  test.mdx  types.mdx  vigilo-persistence.md
dora/: generate-icons.sh  next.config.ts  package-lock.json  package.json  tsconfig.json
dora-v2/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
drizzle-sidebar-manager-main/: bun.lockb  eslint.config.js  package.json  tailwind.config.ts  vite.config.ts
elegant-app-foundation-main/: tailwind.config.ts
homebrew-dora/: README.md
scripts/: bump-version.mjs  diagnose-tauri-dev.sh  generate-release-text.sh  release-prepare.sh  release.sh  ship.sh  sync-changelog-data.ts
snap/: snapcraft.yaml
specs/: DATA_SEEDING.md
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
test_queries/: 01_create_tables.sql  (+2 more)
(+1340 files in other folders)
