[package]
name = "dora"
version = "0.36.0"
description = ""
authors = ["Remco Stoeten"]
license = "GPLv3"
edition = "2021"
default-run = "dora"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
duckdb-engine = ["dep:duckdb"]

[lib]
name = "app_lib"
crate-type = ["lib"]

[[bin]]
name = "duckdb_helper"
path = "src/bin/duckdb_helper.rs"
required-features = ["duckdb-engine"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
tauri = { version = "2.8.0", features = ["macos-private-api"] }
# `tauri-runtime`/`tauri-runtime-wry` are published ahead of the `tauri` crate
# itself (a 2.11.x runtime exists while the latest `tauri` is 2.10.3). Cargo's
# caret resolution otherwise floats `tauri-runtime` up to 2.11, which `tauri`
# 2.10.3 cannot compile against (the 2.11 runtime adds trait methods the matching
# 2.10 `tauri-runtime-wry` doesn't implement). Pin both to the 2.10 line — these
# constraints can be removed once the `tauri` crate itself reaches 2.11.
tauri-runtime = "~2.10"
tauri-runtime-wry = "~2.10"
tauri-plugin-log = "2"
thiserror = "2.0.12"
tokio-postgres = { version = "0.7", features = [
	"with-chrono-0_4",
	"with-serde_json-1",
	"with-uuid-1"
] }
tokio = { version = "1.0", features = [
	"rt-multi-thread",
	"macros",
	"process",
	"io-util",
	"io-std",
	"sync",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
anyhow = "1.0.98"
rustls = { version = "0.23.29", features = ["ring"] }
rustls-native-certs = "0.8.1"
webpki-roots = "1.0.2"
tokio-postgres-rustls = "0.13.0"
dirs = "6.0.0"
rusqlite = { package = "libsql-rusqlite", version = "0.9.29", default-features = false, features = [
	"bundled",
	"column_decltype",
	"functions",
	"hooks",
	"limits",
	"modern_sqlite",
	"trace",
	"libsql-experimental"
] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
rustls-pemfile = "2.2.0"
bytes = "1.10.1"
hex = "0.4.3"

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json", "uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"

rfd = "0.15.4"
keyring = { version = "3.2.0", features = [
	"apple-native",
	"windows-native",
	"sync-secret-service"
] }
url = "2.5.4"
percent-encoding = "2.3"
aes-gcm = "0.10.3"
async-trait = "0.1"
base64 = "0.22"
libsql = { version = "0.9", default-features = false, features = [
	"core",
	"remote",
	"replication",
	"tls"
] }
russh = "0.61"
mysql_async = "0.36"
duckdb = { version = "1", features = ["bundled"], optional = true }
sqlparser = { version = "0.52", features = ["serde"] }
fake = { version = "3", features = ["derive"] }
rand = "0.9"
bcrypt = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "charset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dotenvy = "0.15"
toml = "0.8"
zstd = "0.13"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
flate2 = "1.1"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dev-dependencies]
pgtemp = "0.6.0"

[patch.crates-io]
libsql-sys = { path = "vendor/libsql-sys" }
